added a loading gif to the page for when api calls are loading

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,6 +8,7 @@
 </header>
 
 <div class="container">
+  <div class="spinner" ng-show="loading"></div>
   <div class="col-lg-9">
     <div class="well" ng-repeat="rep in repArray">
     <ul>
