--- a/client/index.html
+++ b/client/index.html
@@ -80,8 +80,14 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/fsg/fsg.controller.js"></script>
+          <script src="app/fsg/fsg.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/portfolio/portfolio.controller.js"></script>
+          <script src="app/portfolio/portfolio.js"></script>
+          <script src="app/resume/resume.controller.js"></script>
+          <script src="app/resume/resume.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/externalAPIs/externalAPI.service.js"></script>
