Made the form work by working in with google maps for javascript v3 api. The form will, on click, geocode the address, then ship that address off to a sunlight api promise to be turned into usable results. Need to add error handling.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -37,7 +37,7 @@
             <li ng-repeat="state in states"><a href="" ng-click="setState(state)">{{state}}</a></li>
           </ul>
         </div>
-        <button type="submit" class="btn btn-primary comment-button" ng-click="">Update</button>
+        <button type="submit" class="btn btn-primary comment-button" ng-click="updateLocation()">Update</button>
       </p>
     </form>
   </div>
