--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,7 @@
       <script src="bower_components/imagesloaded/imagesloaded.js"></script>
       <script src="bower_components/angular-masonry/angular-masonry.js"></script>
       <!-- endbower -->
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaZm95uSnPabqgVJx9cpl2UbSKyBCa9Ok"></script>
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
 
