--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,8 +8,8 @@
 </header>
 
 <div class="container">
-  <div class="spinner" ng-show="loading"></div>
-  <div class="col-lg-12">
+  <div class="col-lg-8">
+    <div class="spinner" ng-show="loading"></div>
     <div class="well" ng-repeat="rep in repArray">
     <ul>
       <li>
@@ -21,24 +21,24 @@
     </ul>
     </div>
   </div>
-
-  <div class="row">
-    <form class="comment-form col-lg-4">
-      <label>Wrong info or away from home? Enter your address here</label>
-      <p class="form-group">
-        <input type="number"  class="comment-input form-control" placeholder="123" ng-model="address.streetNo">
-        <input type="text" class="comment-input form-control" placeholder="Democracy Ave." ng-model="address.streetName">
-        <input type="text" class="comment-input form-control" placeholder="Cincinnati" ng-model="address.city">
-        <div class="btn-group" dropdown scrollable is-open="status.isopen">
-          <button type="button" class="btn btn-primary dropdown-toggle"> {{address.state}}
-             <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li ng-repeat="state in states"><a href="" ng-click="setState(state)">{{state}}</a></li>
-          </ul>
-        </div>
+  <div class="form-container col-lg-4">
+    <form>
+      <label>Wrong info? Enter your address here</label>
+      <div class="col-sm-4 no-padding-left">
+        <input type="number"  class="form-control" placeholder="123" ng-model="address.streetNo">
+      </div>
+      <div class="col-sm-8 no-padding-left">
+        <input type="text" class="form-control" placeholder="Democracy Ave." ng-model="address.streetName">
+      </div>
+      <div class="col-sm-6 no-padding-left">
+        <input type="text" class="form-control" placeholder="Cincinnati" ng-model="address.city">
+      </div>
+      <div class="col-sm-6 no-padding-left">
+        <input type="text" ng-model="address.state" placeholder="Ohio" typeahead="state for state in states | filter:$viewValue" class="form-control">
+      </div>
+      <div class="col-sm-6 no-padding-left">
         <button type="submit" class="btn btn-primary comment-button" ng-click="updateLocation()">Update</button>
-      </p>
+      </div>
     </form>
   </div>
 
