--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,8 @@
       <script src="bower_components/masonry/masonry.js"></script>
       <script src="bower_components/imagesloaded/imagesloaded.js"></script>
       <script src="bower_components/angular-masonry/angular-masonry.js"></script>
+      <script src="bower_components/bluebird/js/browser/bluebird.js"></script>
+      <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
       <!-- endbower -->
       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaZm95uSnPabqgVJx9cpl2UbSKyBCa9Ok"></script>
       <script src="socket.io-client/socket.io.js"></script>
@@ -79,21 +81,10 @@
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
-          <script src="app/admin/admin.controller.js"></script>
-          <script src="app/admin/admin.js"></script>
-          <script src="app/fsg/fsg.controller.js"></script>
-          <script src="app/fsg/fsg.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
-          <script src="app/portfolio/portfolio.controller.js"></script>
-          <script src="app/portfolio/portfolio.js"></script>
-          <script src="app/resume/resume.controller.js"></script>
-          <script src="app/resume/resume.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
-          <script src="components/externalAPIs/externalAPI.service.js"></script>
-          <script src="components/externalAPIs/geoService.service.js"></script>
-          <script src="components/externalAPIs/sunlightAPI.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
